--- a/ValorantApp/Screen/CharacterVC/CharacteCollectionView/CharacterCollectionViewCell.xib
+++ b/ValorantApp/Screen/CharacterVC/CharacteCollectionView/CharacterCollectionViewCell.xib
@@ -10,59 +10,69 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="CharacterCollectionViewCell" reuseIdentifier="CharacterCollectionViewCell" id="gTV-IL-0wX" customClass="CharacterCollectionViewCell" customModule="ValorantApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="191" height="194"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="characterCell" id="gTV-IL-0wX" customClass="CharacterCollectionViewCell" customModule="ValorantApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="128" height="172"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="191" height="194"/>
+                <rect key="frame" x="0.0" y="0.0" width="128" height="172"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kjd-mX-LLB">
-                        <rect key="frame" x="0.0" y="0.0" width="191" height="194"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ScZ-ys-eqn">
+                        <rect key="frame" x="0.0" y="0.0" width="128" height="172"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="map" translatesAutoresizingMaskIntoConstraints="NO" id="tMW-xh-FWN">
-                                <rect key="frame" x="38" y="24" width="115" height="110"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.arrow.up.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="gY2-82-osy">
+                                <rect key="frame" x="15" y="12.5" width="98" height="127"/>
+                                <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                <color key="tintColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="110" id="X2D-x1-cT5"/>
+                                    <constraint firstAttribute="height" constant="128" id="uOf-Ox-hZb"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xBD-vz-upa">
-                                <rect key="frame" x="68" y="142" width="55" height="31"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="tinted" title="Seç"/>
-                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Unicorn" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9YE-qL-m6B">
+                                <rect key="frame" x="34" y="143" width="60" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="xBD-vz-upa" firstAttribute="top" secondItem="tMW-xh-FWN" secondAttribute="bottom" constant="8" symbolic="YES" id="Am6-g6-bcQ"/>
-                            <constraint firstItem="xBD-vz-upa" firstAttribute="leading" secondItem="kjd-mX-LLB" secondAttribute="leading" constant="68" id="C5U-s2-s4e"/>
-                            <constraint firstAttribute="trailing" secondItem="tMW-xh-FWN" secondAttribute="trailing" constant="38" id="CZF-89-mFr"/>
-                            <constraint firstItem="tMW-xh-FWN" firstAttribute="leading" secondItem="kjd-mX-LLB" secondAttribute="leading" constant="38" id="ID1-GR-P46"/>
-                            <constraint firstAttribute="bottom" secondItem="xBD-vz-upa" secondAttribute="bottom" constant="21" id="MYG-mI-IwN"/>
-                            <constraint firstAttribute="trailing" secondItem="xBD-vz-upa" secondAttribute="trailing" constant="68" id="Xl9-2b-GdF"/>
-                            <constraint firstItem="tMW-xh-FWN" firstAttribute="top" secondItem="kjd-mX-LLB" secondAttribute="top" constant="24" id="s8y-r2-AMa"/>
+                            <constraint firstItem="gY2-82-osy" firstAttribute="top" secondItem="ScZ-ys-eqn" secondAttribute="top" constant="12" id="6o6-JD-osf"/>
+                            <constraint firstAttribute="trailing" secondItem="9YE-qL-m6B" secondAttribute="trailing" constant="34" id="UwT-45-Etk"/>
+                            <constraint firstItem="9YE-qL-m6B" firstAttribute="leading" secondItem="ScZ-ys-eqn" secondAttribute="leading" constant="34" id="WiV-tH-gF8"/>
+                            <constraint firstItem="gY2-82-osy" firstAttribute="leading" secondItem="ScZ-ys-eqn" secondAttribute="leading" constant="15" id="fbs-kc-l4l"/>
+                            <constraint firstAttribute="bottom" secondItem="9YE-qL-m6B" secondAttribute="bottom" constant="8" id="hhX-9W-Mr7"/>
+                            <constraint firstItem="9YE-qL-m6B" firstAttribute="centerX" secondItem="ScZ-ys-eqn" secondAttribute="centerX" id="xCW-WJ-XOr"/>
+                            <constraint firstAttribute="trailing" secondItem="gY2-82-osy" secondAttribute="trailing" constant="15" id="zSX-xU-xMD"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="kjd-mX-LLB" secondAttribute="trailing" id="AU9-3H-EzM"/>
-                <constraint firstItem="kjd-mX-LLB" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="FuI-io-Vbc"/>
-                <constraint firstItem="kjd-mX-LLB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="xtw-oK-0SD"/>
+                <constraint firstItem="ScZ-ys-eqn" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Uwn-Zm-xzS"/>
+                <constraint firstAttribute="trailing" secondItem="ScZ-ys-eqn" secondAttribute="trailing" id="ZcP-yo-Znh"/>
+                <constraint firstAttribute="bottom" secondItem="ScZ-ys-eqn" secondAttribute="bottom" id="c2Q-4K-7BT"/>
+                <constraint firstItem="ScZ-ys-eqn" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="u9x-fF-Mdc"/>
             </constraints>
-            <size key="customSize" width="191" height="194"/>
+            <size key="customSize" width="128" height="172"/>
             <connections>
-                <outlet property="characterDetailAction" destination="xBD-vz-upa" id="H0F-mU-qkf"/>
-                <outlet property="characterImageView" destination="tMW-xh-FWN" id="VP6-KJ-ejV"/>
+                <outlet property="characterImageView" destination="gY2-82-osy" id="HzS-1C-RMx"/>
+                <outlet property="characterNameLabel" destination="9YE-qL-m6B" id="9Fz-wE-RHs"/>
             </connections>
-            <point key="canvasLocation" x="-12.318840579710146" y="59.598214285714285"/>
+            <point key="canvasLocation" x="194.20289855072465" y="132.58928571428572"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="map" width="900" height="883"/>
+        <image name="square.and.arrow.up.circle.fill" catalog="system" width="128" height="121"/>
+        <systemColor name="secondarySystemGroupedBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
