--- a/ValorantApp/Screen/CharacterVC/CharacterVC.storyboard
+++ b/ValorantApp/Screen/CharacterVC/CharacterVC.storyboard
@@ -23,21 +23,29 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="y1C-Im-u2q">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nUI-KS-mrI">
                                 <rect key="frame" x="0.0" y="89.5" width="414" height="772.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wv5-Zk-cR7">
-                                    <size key="itemSize" width="128" height="128"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="5" id="Yru-Na-m8R">
+                                    <size key="itemSize" width="200" height="250"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="2" minY="10" maxX="2" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="5Pn-zr-Ud8">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="characterCell" id="kXf-PX-hff">
+                                        <rect key="frame" x="2" y="10" width="200" height="250"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="dTZ-cx-4Ce">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="55r-BP-Yew">
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="250"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="AGi-jQ-WKK">
+                                        <rect key="frame" x="212" y="10" width="200" height="250"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="dRg-Zh-Jyl">
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="250"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </collectionViewCellContentView>
                                     </collectionViewCell>
@@ -47,18 +55,18 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemRedColor"/>
                         <constraints>
-                            <constraint firstItem="y1C-Im-u2q" firstAttribute="top" secondItem="iCZ-Qn-mMM" secondAttribute="bottom" id="CLZ-Hb-hgW"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="iCZ-Qn-mMM" secondAttribute="trailing" constant="10" id="LIu-vU-3gO"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="nUI-KS-mrI" secondAttribute="bottom" id="OmR-zn-l4G"/>
                             <constraint firstItem="iCZ-Qn-mMM" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Sys-4K-9kS"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="y1C-Im-u2q" secondAttribute="trailing" id="Wtu-HH-3PM"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="nUI-KS-mrI" secondAttribute="trailing" id="V2V-Mi-No7"/>
+                            <constraint firstItem="nUI-KS-mrI" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="euI-7d-SjK"/>
                             <constraint firstItem="iCZ-Qn-mMM" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="pqb-9C-ubF"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="y1C-Im-u2q" secondAttribute="bottom" id="sSQ-gW-O0Y"/>
                             <constraint firstItem="iCZ-Qn-mMM" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="10" id="srE-fq-NO0"/>
-                            <constraint firstItem="y1C-Im-u2q" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="tur-G2-y55"/>
+                            <constraint firstItem="nUI-KS-mrI" firstAttribute="top" secondItem="iCZ-Qn-mMM" secondAttribute="bottom" id="yp2-pj-aEu"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="collectionView" destination="y1C-Im-u2q" id="F4P-u5-9xu"/>
+                        <outlet property="characterCollectionView" destination="nUI-KS-mrI" id="GDg-wk-AdI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
